Add button to remove effects
The list-effects API response now includes a button that lets you easily
remove one of the effects on your character.

Misc other things:
* Fix distance shooter secondary rolls title
* Reorder imports and remove unused ones
* Also send chat if we can't find a character

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -2715,5 +2715,13 @@ Desired example
         </tr>
         {{/effects}}
 
+        {{#button}}
+        <tr style="text-align:center; background:#FFFFFF; color:#000000;">
+            <td colspan="2">
+                {{button}}
+            </td>
+        </tr>
+        {{/button}}
+
     </table>
 </rolltemplate>
