update example template usage

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -2592,6 +2592,7 @@ Desired example
 {{physical=[[d100]]}} {{psychic=[[d100]]}} {{fire=[[d100]]}} {{water=[[d100]]}} {{earth=[[d100]]}} {{air=[[d100]]}} {{ice=[[d100]]}} {{lightning=[[d100]]}} {{light=[[d100]]}} {{dark=[[d100]]}} {{healing=[[d100]]}}
 {{crit_value=[[40]]}} {{crit_cutoff=[[50]]}}
 {{effects="something cool"}}
+{{button=[List Effects](!barbs list_effects)}}
 -->
 
 <rolltemplate class="sheet-rolltemplate-Barbs">
