Handle condition specific CR rolls
Rolling Condition Resist from the character sheet will do a general CR
roll, and then give a button to roll CR against a specific condition.
Also, just clicking the Condition Resist button on the stats page asks
you what condition you want to roll now.

Items that boost condition-specific CRs are now supported.

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -611,7 +611,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_condition_resist" value="!barbs stat Condition_Resist"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_condition_resist" value="!barbs cr ?{Condition|General|Bleeding|Blinded|Charmed|Confused|Crippled|Cursed|Decreased Stats|Fear|Frozen|Helpless|Immobilized|Knocked Down (Prone)|Knocked Up (Airborne)|Paralyzed|Petrified|Poisoned|Silenced|Sleeping|Slowed|Stunned|Taunted|Weakened}"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Condition Resist</div>
