--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -166,18 +166,20 @@
                 <!-- right column -->
                 <div class="sheet-col-1-2">
                     <h4 class="sheet-center">General</h4>
-                    <div class="sheet-row sheet-padb">
-                        <button type="roll" class="sheet-col-5-24 sheet-center sheet-initiative sheet-large-button" name="roll_Initiative" value="!barbs initiative">Initiative</button>
+                    <div class="sheet-row sheet-padb sheet-center">
+                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Initiative" value="!barbs initiative">Initiative</button>
+                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_List_Effects" value="!barbs list_effects">List Effects</button>
+                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Death_Save" value="&{template:5eDefault}  {{title=Death Save}} {{subheader=@{character_name}}} {{rollname=Death save}} {{roll=[[1d100]]}}">Death Save</button>
+                    </div>
 
-                        <button type="roll" class="sheet-col-5-24 sheet-center sheet-initiative sheet-large-button" name="roll_List_Effects" value="!barbs list_effects">List Effects</button>
-
-                        <button type="roll" class="sheet-col-5-24 sheet-center sheet-initiative sheet-large-button" name="roll_Concentration" value="!barbs concentration">Concentration</button>
-
-                        <button type="roll" class="sheet-col-5-24 sheet-center sheet-initiative sheet-large-button" name="roll_Death_Save" value="&{template:5eDefault}  {{title=Death Save}} {{subheader=@{character_name}}} {{rollname=Death save}} {{roll=[[1d100]]}}">Death Save</button>
+                    <div class="sheet-row sheet-padb sheet-center">
+                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Take_Damage" value="!barbs dmg ?{Physical|0} ?{Psychic|0} ?{Fire|0} ?{Water|0} ?{Earth|0} ?{Air|0} ?{Ice|0} ?{Lightning|0} ?{Light|0} ?{Dark|0}">Take Damage</button>
+                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Condition_Resist" value="!barbs cr ?{Condition|General|Bleeding|Blinded|Charmed|Confused|Crippled|Cursed|Decreased Stats|Fear|Frozen|Helpless|Immobilized|Knocked Down (Prone)|Knocked Up (Airborne)|Paralyzed|Petrified|Poisoned|Silenced|Sleeping|Slowed|Stunned|Taunted|Weakened}">Condition Resist</button>
+                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Concentration" value="!barbs concentration">Concentration</button>
                     </div>
 
                     <h4 class="sheet-center">Level and Combat Experience</h4>
-                    <div class="sheet-row">
+                    <div class="sheet-row sheet-center">
                         <div class="sheet-col-1-3 sheet-small-label sheet-center" title="This is automatically calculated from your individual class levels listed in the class section">
                             <input class="sheet-underlined" type="number" name="attr_level" value="@{hidden_level}" disabled="disabled">
                             <input type="hidden" name="attr_hidden_level" value="200+@{VIT}+@{END}+@{SPT}+@{RCV}+@{PER}+@{SAN}+@{AGI}+@{TGH}+@{REF}+@{RES}+@{FRT}+@{STR}+@{DEX}+@{ATN}+@{PRE}+@{APL}+@{INT}+@{WIS}+@{COM}+@{FCS}"/>
@@ -565,7 +567,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_ac" value="!barbs stat AC"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_ac" value="!barbs dmg ?{Physical|0} ?{Psychic|0} ?{Fire|0} ?{Water|0} ?{Earth|0} ?{Air|0} ?{Ice|0} ?{Lightning|0} ?{Light|0} ?{Dark|0}"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">AC</div>
@@ -589,7 +591,7 @@
 
                     <div class="sheet-row sheet-skill-row">
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_magic_resist" value="!barbs stat Magic_Resist"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_magic_resist" value="!barbs dmg ?{Physical|0} ?{Psychic|0} ?{Fire|0} ?{Water|0} ?{Earth|0} ?{Air|0} ?{Ice|0} ?{Lightning|0} ?{Light|0} ?{Dark|0}"></button>
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-3 sheet-skill-name">Magic Resist</div>
@@ -2609,6 +2611,13 @@ Desired example
             <td class="template_value">{{healing}}</td>
         </tr>
         {{/healing}}
+
+        {{#total}}
+        <tr style="background:#702082; color:#FFFFFF">
+            <td class="template_label">Total:</td>
+            <td class="template_value">{{total}}</td>
+        </tr>
+        {{/total}}
 
         {{#modified_crit}}
         {{#rollLess() crit_value crit_cutoff}}
