Handle and roll combo chance
Add a field to rolls for combo chance, allow it to be increased by items and
persistent effects. Handle combo chance affixes on items. Update API for
corresponding Martial Artist changes and item constructing. Change crit
chance to always show your actual crit chance, not the 100% capped chance.
Changed API page generation to always show all abilities in the class,
regardless of whether or not the passive has the "api" field. Also cache
monk mastery for a character so we don't have to fetch those attributes
multiple times.

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -2624,6 +2624,13 @@ Desired example
         {{/^rollLess() crit_value crit_cutoff}}
         {{/modified_crit}}
 
+        {{#combo}}
+        <tr style="background:#5656AD; color:#FFFFFF">
+            <td class="template_label">Combo ({{combo_chance}}%):</td>
+            <td class="template_value">{{combo}}</td>
+        </tr>
+        {{/combo}}
+
         {{#effects}}
         <tr style="background:#FFFFFF; color:#000000;">
             <td colspan="2">
