color palette update

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -2532,35 +2532,35 @@ Desired example
         {{/physical}}
 
         {{#psychic}}
-        <tr style="background:#BAFFA5;">
+        <tr style="background:#FF9BFF;">
             <td class="template_label">Psychic:</td>
             <td class="template_value">{{psychic}}</td>
         </tr>
         {{/psychic}}
 
         {{#fire}}
-        <tr style="background:#FF8484;">
+        <tr style="background:#FF6868;">
             <td class="template_label">Fire:</td>
             <td class="template_value">{{fire}}</td>
         </tr>
         {{/fire}}
 
         {{#water}}
-        <tr style="background:#BFFFFF;">
+        <tr style="background:#70D8FF;">
             <td class="template_label">Water:</td>
             <td class="template_value">{{water}}</td>
         </tr>
         {{/water}}
 
         {{#earth}}
-        <tr style="background:#E7B5FF;">
+        <tr style="background:#B58A6E;">
             <td class="template_label">Earth:</td>
             <td class="template_value">{{earth}}</td>
         </tr>
         {{/earth}}
 
         {{#air}}
-        <tr style="background:#6C876C;">
+        <tr style="background:#BAFFA5;">
             <td class="template_label">Air:</td>
             <td class="template_value">{{air}}</td>
         </tr>
@@ -2574,7 +2574,7 @@ Desired example
         {{/ice}}
 
         {{#lightning}}
-        <tr style="background:#FFE793;">
+        <tr style="background:#FCF79F;">
             <td class="template_label">Lightning:</td>
             <td class="template_value">{{lightning}}</td>
         </tr>
@@ -2625,7 +2625,7 @@ Desired example
         {{/modified_crit}}
 
         {{#combo}}
-        <tr style="background:#5656AD; color:#FFFFFF">
+        <tr style="background:#E7B5FF">
             <td class="template_label">Combo ({{combo_chance}}%):</td>
             <td class="template_value">{{combo}}</td>
         </tr>
