--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -2183,7 +2183,7 @@
                 const skill_name = skills[i]['name'];
                 if (!(skill_name in skill_to_attribute_map)) {
                     console.log('error, unknown skill ' + skill_name);
-                    return;
+                    continue;
                 }
                 const attr = skill_to_attribute_map[skill_name];
 
