Get rid of old school items
Fully deprecate the old way of defining items. Players will now define their
items and affixes on their character sheet. The API will construct a
corresponding object for the item based on what the player specifies.

Additional changes:
* Update API documentation accordingly.
* Trash the giant list of items.
* More checks and error handling.
* Remove expected "construct;" signal when constructing items.
* Organize classes once again
* Automatically organize rulebook components after validating them
* Fix linking for skill requirements with "or"s
* Trash Nevil's work on fetching skills, I did what he wanted officially :)

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -1910,8 +1910,8 @@
                     continue;
                 }
 
-                const item = items[item_attrs[i]];
-                if (!item.startsWith('construct')) {
+                let item = items[item_attrs[i]];
+                if (item === null || item === '') {
                     continue;
                 }
 
@@ -2046,8 +2046,8 @@
                     continue;
                 }
 
-                const item = items[item_attrs[i]];
-                if (!item.startsWith('construct')) {
+                let item = items[item_attrs[i]];
+                if (item === null || item === '') {
                     continue;
                 }
 
