Add a button to copy abilities from the rulebook
Players often copy abilities from the rulebook and dump it onto their Roll20
character sheet. Add a hidden table for each ability that has nice formatting
and a button to select and save the table to the clipboard. We need a separate
table because, if you copy the regular one, you get white text and borders,
which doesn't look right on the Roll20 character sheet. The hidden table has
black text, black borders, a better font, and a set width so that it looks
nice when pasted on Roll20.

Misc:
* Remove sub-coins from the character sheet, there's only GP.
* Check that character isn't undefined before we try creating one. This was
  showing up when changing turn order for some reason.
* Remove empty tags on abilities

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -982,37 +982,21 @@
         <div class="sheet-section-inventory">
 
             <h4 class="sheet-center">Coin Carried <span class="sheet-pictos">h</span></h4>
-            <p class="sheet-small-note">Total = value of all coins converted to GP</p>
             <div class="sheet-row sheet-sub-header">
-                <div class="sheet-col-1-6 sheet-center sheet-small-label">CP</div>
-                <div class="sheet-col-1-6 sheet-center sheet-small-label">SP</div>
-                <div class="sheet-col-1-6 sheet-center sheet-small-label">EP</div>
-                <div class="sheet-col-1-6 sheet-center sheet-small-label">GP</div>
-                <div class="sheet-col-1-6 sheet-center sheet-small-label">PP</div>
-                <div class="sheet-col-1-6 sheet-center sheet-small-label">Total</div>
+                <div class="sheet-col-1-2 sheet-center sheet-small-label">GP</div>
+                <div class="sheet-col-1-2 sheet-center sheet-small-label">Total</div>
             </div>
 
             <div class="sheet-row">
-                <div class="sheet-col-1-6" title="Copper Pieces">
-                    <input type="number" name="attr_cp" value="0" min="0" step="1">
-                </div>
-                <div class="sheet-col-1-6" title="Silver Pieces">
-                    <input type="number" name="attr_sp" value="0" min="0" step="1">
-                </div>
-                <div class="sheet-col-1-6" title="Electrum Pieces">
-                    <input type="number" name="attr_ep" value="0" min="0" step="1">
-                </div>
-                <div class="sheet-col-1-6" title="Gold Pieces">
+                <div class="sheet-col-1-2" title="Gold Pieces">
                     <input type="number" name="attr_gp" value="0" min="0" step="1">
                 </div>
-                <div class="sheet-col-1-6" title="Platinum Pieces">
-                    <input type="number" name="attr_pp" value="0" min="0" step="1">
-                </div>
-                <div class="sheet-col-1-6" title="Total (in Gold Pieces)">
-                    <input type="number" name="attr_money_total_gp" value="(@{cp} / 100) + (@{sp} / 10) + (@{ep} / 2) + @{gp} + (@{pp} * 10) " disabled="disabled">
+                <div class="sheet-col-1-2" title="Total (in Gold Pieces)">
+                    <input type="number" name="attr_money_total_gp" value="(@{gp}) " disabled="disabled">
                 </div>
             </div>
 
+            <h4 class="sheet-center">Inventory</h4>
             <input type="radio" name="attr_inventorytab" class="sheet-inventorytab sheet-inventorytab1" value="1" title="Page 1" checked="checked" />
             <span class="sheet-inventorytab sheet-inventorytab1">Page 1</span>
             <input type="radio" name="attr_inventorytab" class="sheet-inventorytab sheet-inventorytab2" value="2" title="Page 2" />
