--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -1594,6 +1594,8 @@
                         <input type="hidden" name="attr_hidden_bonus" value=""/>
                     </div>
                 </fieldset>
+
+                <button type="action" name="act_sort_skills">Alphabetize Skills</button>
             </div>
         </div>
 
@@ -2920,7 +2922,7 @@
             return revised;
         }
 
-        function organize_skills(skills) {
+        function organize_skills(skills, lowercase = true) {
             const pass_1 = {};
 
             let skill_ids = Object.keys(skills);
@@ -2950,7 +2952,10 @@
                     continue;
                 }
 
-                revised['name'] = values['name'].toLowerCase();
+                revised['name'] = values['name'];
+                if (lowercase) {
+                    revised['name'] = revised['name'].toLowerCase();
+                }
                 revised['points'] = values['points'];
                 pass_2.push(revised);
             }
@@ -3091,6 +3096,22 @@
             setAttrs(attrs_to_update);
         }
 
+        function recursive_update(skills, index, handler) {
+            if (index === skills.length) {
+                handler();
+                return;
+            }
+
+            console.log('Creating row for skill ' + skills[index]['name']);
+            const new_attrs = {};
+            const skill_id = generateRowID();
+            new_attrs['repeating_skills_' + skill_id + '_skill_name'] = skills[index]['name'];
+            new_attrs['repeating_skills_' + skill_id + '_skill_points'] = skills[index]['points'];
+            setAttrs(new_attrs, null, function() {
+                recursive_update(skills, index + 1, handler);
+            });
+        }
+
         function handle_item_change(event) {
             getAttrs(item_attrs, function(items) {
                 getSectionIDs('repeating_skills', function(skill_ids) {
@@ -3110,9 +3131,52 @@
             });
         }
 
+        // React to any item slot changing
+        //
         for (let i = 0; i < item_attrs.length; i++) {
             on('change:%s'.format(item_attrs[i]), handle_item_change);
         }
+
+        // React to the button to alphabetize all skills. We do this by fetching all skills, deleting all rows in
+        // the repeating section, and then recreating the rows in alphabetical order.
+        //
+        on('clicked:sort_skills', function() {
+            getSectionIDs('repeating_skills', function(skill_ids) {
+                const specific_skill_ids = [];
+                for(let i = 0; i < skill_ids.length; i++) {
+                    const skill_id = skill_ids[i];
+                    specific_skill_ids.push('repeating_skills_%s_skill_name'.format(skill_id));
+                    specific_skill_ids.push('repeating_skills_%s_skill_points'.format(skill_id));
+                }
+
+                getAttrs(specific_skill_ids, function(skills) {
+                    console.log(JSON.stringify(skills));
+                    skills = organize_skills(skills, /*lowercase=*/false);
+
+                    // Delete all existing rolls
+                    for (let i = 0; i < skills.length; i++) {
+                        const skill_id = skills[i]['id'];
+                        removeRepeatingRow('repeating_skills_' + skill_id);
+                    }
+
+                    skills.sort(function(a, b) {
+                        if (a.name < b.name) {
+                            return -1;
+                        } else if (a.name > b.name) {
+                            return 1;
+                        }
+                        return 0;
+                    });
+
+                    // Recreate all rows in alphabetical order. setAttrs is asynchronous, so we do some recursive fun
+                    // here to ensure that we're only updating one row at a time. There were some issues with rows
+                    // disappearing if we tried to update all rows simultaneously.
+                    //
+                    recursive_update(skills, /*index=*/0, handle_item_change);
+                });
+            });
+        });
+
 
     </script>
 
