--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -120,7 +120,7 @@
             </div>
 
 
-            <div class="sheet-row">
+            <div class="sheet-row sheet-padb">
 
                 <!-- left column -->
                 <div class="sheet-col-1-2 sheet-padr">
@@ -202,6 +202,29 @@
                     </div>
 
                 </div>
+            </div>
+
+
+            <div class="sheet-row sheet-padb">
+                <div class="sheet-col-1-2">
+                    <h4 class="sheet-center">Class AP Investment</h4>
+
+                    <fieldset class="repeating_investment">
+                        <div class="sheet-row">
+                            <div class="sheet-col-1-2">
+                                <input type="text" name="attr_invest_name" value="@{hidden_invest_name}" disabled="disabled"/>
+                            </div>
+                            <div class="sheet-col-1-2">
+                                <input type="number" name="attr_investment-ap" value="@{hidden_invest_ap}" disabled="disabled"/>
+                            </div>
+
+                            <input type="hidden" name="attr_hidden_invest_name" value=""/>
+                            <input type="hidden" name="attr_hidden_invest_ap" value=""/>
+                        </div>
+                    </fieldset>
+                </div>
+
+                <div class="sheet-col-1-2">&nbsp;</div>
             </div>
         </div>
 
@@ -3152,7 +3175,7 @@
                 getAttrs(specific_skill_ids, function(skills) {
                     skills = organize_skills(skills, /*lowercase=*/false);
 
-                    // Delete all existing rolls
+                    // Delete all existing rows
                     for (let i = 0; i < skills.length; i++) {
                         const skill_id = skills[i]['id'];
                         removeRepeatingRow('repeating_skills_' + skill_id);
@@ -3176,6 +3199,127 @@
             });
         });
 
+
+    </script>
+
+
+    <!-- Updates class investment table as classes change -->
+    <script type="text/worker">
+        String.prototype.format = function() {
+            let a = this;
+            for (let i = 0; i < arguments.length; i++) {
+                a = a.replace('%s', arguments[i]);
+            }
+            return a
+        };
+
+        // We're given a map of full attributes from repeating rows -> attribute values
+        function organize_classes(map) {
+            // Turn it into a map of row id -> {'name': name, 'ap': ap}
+            const pass_1 = {};
+            const attr_ids = Object.keys(map);
+            for (let i = 0; i < attr_ids.length; i++) {
+                const full_attr_id = attr_ids[i];
+                const value = map[full_attr_id];
+                const attr_id = full_attr_id.split('_')[2];
+
+                if (!(attr_id in pass_1)) {
+                    pass_1[attr_id] = {};
+                }
+
+                if (full_attr_id.includes('name')) {
+                    pass_1[attr_id]['name'] = value;
+                } else if (full_attr_id.includes('tier')) {
+                    pass_1[attr_id]['ap'] = value;
+                }
+            }
+
+            // Turn pass_1 into a map of class names to total AP
+            const pass_2 = {};
+            const ids = Object.keys(pass_1);
+            for (let i = 0; i < ids.length; i++) {
+                const dict = pass_1[ids[i]];
+                if (!('name' in dict) || !('ap' in dict)) {
+                    continue;
+                }
+
+
+                const val = parseInt(dict['ap'], 10);
+                if (Number.isNaN(val)) {
+                    continue;
+                }
+
+                const name = dict['name'];
+                if (!(name in pass_2)) {
+                    pass_2[name] = 0;
+                }
+
+                pass_2[name] += val;
+            }
+
+            // Turn pass_2 into a list of [name, ap] entries
+            const pass_3 = [];
+            const class_names = Object.keys(pass_2);
+            for (let i = 0; i < class_names.length; i++) {
+                const class_name = class_names[i];
+                const ap = pass_2[class_name];
+                pass_3.push([class_name, ap]);
+            }
+
+            return pass_3;
+        }
+
+        function recursive_update(classes, index) {
+            if (index === classes.length) {
+                return;
+            }
+
+            console.log('Creating row for class investment ' + classes[index][0]);
+            const new_attrs = {};
+            const class_investment_id = generateRowID();
+            new_attrs['repeating_investment_' + class_investment_id + '_hidden_invest_name'] = classes[index][0];
+            new_attrs['repeating_investment_' + class_investment_id + '_hidden_invest_ap'] = classes[index][1];
+            setAttrs(new_attrs, null, function() {
+                recursive_update(classes, index + 1);
+            });
+        }
+
+        function update_class_investment() {
+            getSectionIDs('repeating_abilities', function(ids) {
+                const class_attrs = [];
+                for (let i = 0; i < ids.length; i++) {
+                    class_attrs.push('repeating_abilities_%s_class_name'.format(ids[i]));
+                    class_attrs.push('repeating_abilities_%s_ability_tier'.format(ids[i]));
+                }
+
+                getAttrs(class_attrs, function(values) {
+                    const class_investment = organize_classes(values);
+
+                    // Sort class AP by name alphabetically
+                    class_investment.sort(function(a, b) {
+                        if (a[0] < b[0]) {
+                            return -1;
+                        } else if (a.name > b.name) {
+                            return 1;
+                        }
+                        return 0;
+                    });
+
+                    // Delete all existing rows and recreate all rows in alphabetical order. setAttrs is asynchronous,
+                    // so we do some recursive fun here to ensure that we're only updating one row at a time.
+                    getSectionIDs('repeating_investment', function(investment_ids) {
+                        for (let i = 0; i < investment_ids.length; i++) {
+                            removeRepeatingRow('repeating_investment_' + investment_ids[i]);
+                        }
+
+                        recursive_update(class_investment, /*index=*/0);
+                    });
+                });
+            });
+        }
+
+        on('change:repeating_abilities:class_name', update_class_investment);
+        on('change:repeating_abilities:ability_tier', update_class_investment);
 
     </script>
 
