--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -182,6 +182,11 @@
                         <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Concentration" value="!barbs concentration">Concentration</button>
                     </div>
 
+                    <div class="sheet-row sheet-padb sheet-center">
+                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Short_Rest" value="!barbs rest short">Short Rest</button>
+                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Long_Rest" value="!barbs rest long">Long Rest</button>
+                    </div>
+
                     <h4 class="sheet-center">Level and Combat Experience</h4>
                     <div class="sheet-row sheet-center">
                         <div class="sheet-col-1-3 sheet-small-label sheet-center" title="This is automatically calculated from your individual class levels listed in the class section">
