--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -1795,6 +1795,12 @@
                 </div>
             </div>
 
+            <div class="sheet-row">
+                <div class="sheet-col-1-6">&nbsp;</div>
+                <button type="roll" class="sheet-col-2-3 sheet-center sheet-large-thin-button" name="roll_Check_Items" value="!barbs check_items">Check Items</button>
+            </div>
+            <br>
+
             <hr/>
             <h4 class="sheet-center">Extra Equipment</h4>
             <textarea name="attr_extra_items"></textarea>
@@ -1807,7 +1813,7 @@
             <h4 class="sheet-center">Coin Carried <span class="sheet-pictos">h</span></h4>
             <div class="sheet-row">
                 <div class="sheet-col-1-2" title="Gold Pieces">
-                    <input class="sheet-center" type="text" value="GP" disabled="disabled"/>
+                    <input class="sheet-center" type="text" value="Gold Pieces" disabled="disabled"/>
                 </div>
                 <div class="sheet-col-1-2" title="Gold Pieces">
                     <input class="sheet-center" type="text" name="attr_gp">
